protocols/tests/adders/adder_d1/wait_and_add_incorrect_implicit.out
error: Thread 0 (`wait_and_add`) attempted conflicting assignment to 'a': current=4, new=1
   ┌─ adders/adder_d1/add_d1.prot:74:3
   │
74 │   DUT.a := a;
   │   ^^^^^^^^^^^ Thread 0 (`wait_and_add`) attempted conflicting assignment to 'a': current=4, new=1

error: Thread 1 (`add_incorrect_implicit`) attempted conflicting assignment to 'a': current=1, new=4
   ┌─ adders/adder_d1/add_d1.prot:55:3
   │
55 │   DUT.a := a;
   │   ^^^^^^^^^^^ Thread 1 (`add_incorrect_implicit`) attempted conflicting assignment to 'a': current=1, new=4

